css/projects: fix non-featured project name margin on mobile

--- a/css/projects.scss
+++ b/css/projects.scss
@@ -78,6 +78,15 @@
 	}
 }
 
+.project:not(.feature) {
+	.project-name {
+		margin-top: 0.5rem;
+
+		@media (min-width: 768px) {
+			margin-top: 0;
+		}
+	}
+}
 .project-feature-info {
 	border-top-right-radius: 5px;
 	border-bottom-right-radius: 5px;
